# FFL-v2

./: CMakeLists.txt  LICENSE  README.md
ffl/: CMakeLists.txt
ffl/example/: serverMain.cpp
ffl/include/: FFL_Assert.h  FFL_Commandline.h  FFL_Config.h  FFL_Core.h  FFL_Error.h  FFL_Initialize.h  FFL_Loadmodule.h  FFL_Log.h  FFL_Memory.h  FFL_Time.h  FFL_Utility.h
ffl/include/net/: FFL_NetConnect.hpp  FFL_NetConnectManager.hpp  FFL_NetServer.hpp  FFL_NetSocket.hpp  FFL_NetStream.hpp  FFL_Socket.h  FFL_SocketConstant.h
ffl/include/pipeline/: FFL_Pipeline.hpp  FFL_PipelineAsyncConnector.hpp  FFL_PipelineAsyncConnectorFixedsize.hpp  FFL_PipelineConnector.hpp  FFL_PipelineEvent.hpp  FFL_PipelineEventCallback.hpp  FFL_PipelineInput.hpp  FFL_PipelineInputHandler.hpp  FFL_PipelineMessage.hpp  FFL_PipelineNode.hpp  FFL_PipelineNodeHandler.hpp  FFL_PipelineNodeParser.hpp  FFL_PipelineOutput.hpp
ffl/include/ref/: FFL_Ref.hpp  FFL_RefAtomic.hpp  FFL_RefBase.hpp  FFL_RefCount.hpp  FFL_RefLog.hpp  FFL_RefSp.hpp  FFL_RefWeakimpl.hpp  FFL_RefWp.hpp
ffl/include/thread/: FFL_Coroutine.hpp  FFL_Mutex.hpp
ffl/include/utils/: FFL_ByteBuffer.hpp  FFL_ByteReader.hpp  FFL_ByteStream.hpp  FFL_ByteWriter.hpp  FFL_Clock.hpp  FFL_Dictionary.hpp  FFL_File.hpp  FFL_Flags.hpp  FFL_Handler.hpp  FFL_HandlerManager.hpp  FFL_Io.hpp  FFL_Looper.hpp  FFL_MemoryWatch.hpp  FFL_MessageQueue.hpp  FFL_Serializable.hpp  FFL_Singleton.hpp  FFL_String.hpp  FFL_Utils.hpp  FFL_Vector.hpp
ffl/source/: FFL_Commandline.c  FFL_Error.c  FFL_Initialize.c  FFL_Loadmodule.c  FFL_Log.c  FFL_Memory.c  FFL_Time.c  FFL_Utility.c  FFL_Version.c  linux_time.c
ffl/source/atomic/: FFL_Atomic.c  atomic.h
ffl/source/getopt/: getopt.c
ffl/source/net/: FFL_NetConnect.cpp  FFL_NetConnect.hpp  FFL_NetConnectManager.cpp  FFL_NetConnectManager.hpp  FFL_NetServer.cpp  FFL_NetServer.hpp  FFL_NetSocket.cpp  FFL_NetStream.cpp  FFL_Socket.c  FFL_Socket.cpp  FFL_SocketAnyAddrServer.c  FFL_SocketLoopbackClient.c  FFL_SocketLoopbackServer.c  FFL_SocketNetworkClient.c
ffl/source/pipeline/: FFL_Pipeline.cpp  FFL_PipelineAsyncConnector.cpp  FFL_PipelineAsyncConnectorFixedSize.cpp  FFL_PipelineConnector.cpp  FFL_PipelineEvent.cpp  FFL_PipelineInput.cpp  FFL_PipelineMessage.cpp  FFL_PipelineNode.cpp  FFL_PipelineNodeHandler.cpp  FFL_PipelineNodeManager.cpp  FFL_PipelineNodeManager.hpp  FFL_PipelineNodeParser.cpp  FFL_PipelineOutput.cpp  PipelineInputList.cpp  PipelineInputList.hpp  PipelineLooper.cpp  PipelineLooper.hpp  PipelineMessageTrackFile.cpp  PipelineOutputList.cpp  PipelineOutputList.hpp
ffl/source/ref/: FFL_RefBase.cpp  FFL_RefWakeimpl.cpp
ffl/source/thread/: FFL_Mutex.cpp  FFL_Thread.cpp  FFL_thread.c
ffl/source/utils/: FFL_ByteBuffer.cpp  FFL_ByteStream.cpp  FFL_Clock.cpp  FFL_Dictionary.cpp  FFL_File.cpp  FFL_Flags.cpp  FFL_Handler.cpp  FFL_HandlerManager.cpp  FFL_Looper.cpp  FFL_MemoryWatch.cpp  FFL_Message.cpp  FFL_MessageQueue.cpp  FFL_Serializable.cpp  FFL_Singleton.cpp  FFL_String.cpp
ide/android-player/app/: build.gradle
ide/androidPlayer/: build.gradle
ide/androidPlayer/app/: build.gradle
ide/mfc2015Player/: DialogPlayer.cpp  DialogPlayer.h  FFLPlayerWindow.cpp  FFLPlayerWindow.h  MFCPlayer.cpp  MFCPlayer.rc  MFCPlayer.sln  MFCPlayer.vcxproj  MFCPlayerDlg.cpp  MFCPlayerDlg.h  resource.h  如何编译这个工程.txt
player/: CMakeLists.txt
player/player/: CMakeLists.txt  main.cpp  player.cpp  testCmd.cpp
player/player_vs2015/: FFLPlayerWindow.cpp  FFLPlayerWindow.h  MFCPlayer.cpp  MFCPlayer.h  MFCPlayer.rc  MFCPlayer.vcxproj  MFCPlayerDlg.cpp  MFCPlayerDlg.h  resource.h  stdafx.cpp  stdafx.h  如何编译这个工程.txt
player/player_vs2015/FFL/: playerLib.lib
player/player_vs2015/res/: MFCPlayer.rc2
player/playerlib/: AVDeviceCreator.cpp  AVDeviceCreator.hpp  AudioComposer.cpp  AudioComposer.hpp  AudioDataCache.cpp  AudioDataCache.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioFormat.cpp  AudioFormat.hpp  AudioRender.cpp  AudioRender.hpp  AudioResample.cpp  AudioResample.hpp  AudioSDL2Render.cpp  AudioSDL2Render.hpp  AudioSample.cpp  AudioSample.hpp  AudioStream.cpp  AudioStream.hpp  AudioUtils.cpp  AudioUtils.hpp  CMakeLists.txt  ClockUpdater.cpp  ClockUpdater.hpp  Composer.cpp  Composer.hpp  Decoder.cpp  Decoder.hpp  DefaultDeviceManager.cpp  DefaultDeviceManager.hpp  DeviceFactory.cpp  DeviceFactory.hpp  DeviceManager.cpp  DeviceManager.hpp  FFL_AudioDevice.cpp  FFL_AudioDevice.hpp  FFL_Player.hpp  FFL_PlayerEvent.cpp  FFL_Renderer.cpp  (+96 more)
player/playerlib/android/: AndroidAudioDevice.cpp  AndroidAudioDevice.hpp  AndroidModule.cpp  AndroidModule.hpp  AndroidVideoDevice.cpp  AndroidVideoDevice.hpp  JavaAudiotrack.cpp  JavaAudiotrack.hpp  JavaFFLPlayer.cpp  NativeFFLPlayer.cpp  NativeFFLPlayer.hpp
player/playerlib/android/egl/: egl.cpp  egl.hpp
player/playerlib/android/jni/: CMakeLists.txt  FFLPlayerWraper.c  FFLPlayerWraper.h  JNImain.cpp  JavaAudiotrack.cpp  JavaAudiotrack.hpp  JavaFFLPlayer.cpp  JavaFFLPlayer.hpp  NativeFFLPlayer.cpp  NativeFFLPlayer.hpp
player/playerlib/android/jni/jnihelper/: JavaClass.cpp  JavaClass.hpp  JavaObject.cpp  JavaObject.hpp
player/playerlib/android/jnihelper/: JavaClass.cpp  JavaClass.hpp  JavaObject.cpp  JavaObject.hpp  JavaThread.cpp  JavaThread.hpp
player/playerlib/android/opengles2/: SDL_renderTexture.cpp  SDL_render_gles2.cpp  SDL_render_gles2.hpp  SDL_shaders_gles2.c  SDL_shaders_gles2.h
player/playerlib/android/render/: MemcopyRender.cpp  MemcopyRender.hpp  OpenglesRender.cpp  OpenglesRender.hpp  RenderInterface.hpp  RenderManager.cpp  RenderManager.hpp
player/playerlib/reader/: FFmpegReader.cpp  FFmpegReader.hpp  ReaderBase.cpp  ReaderBase.hpp  ReaderFFmpeg.cpp  ReaderFFmpeg.hpp  ReaderFactory.cpp  ReaderFactory.hpp  ReaderInterface.cpp  ReaderStreamManager.hpp  Stream.cpp  Stream.hpp
player/third/: readme.txt
src/include/: FFL_Atomic.h  FFL_Config.h  FFL_Core.h  FFL_Error.h  FFL_Loadmodule.h  FFL_Log.h  FFL_Memory.h  FFL_Platform.h  FFL_Utility.h  FFL_Version.h
src/source/: FFL_Loadmodule.c  FFL_Memory.c  linux_time.c  window_time.c
third/: readme.txt
(+98 files in other folders)
